[Add] data privacy policy.

--- a/p2quiz.html
+++ b/p2quiz.html
@@ -6,7 +6,7 @@
     <title>P2P Quiz Spiel</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <link rel="stylesheet" href="p2quiz.css">
+    <link rel="stylesheet" href="qlash.css">
     <style>
         /* General body and font size for better readability and mobile friendliness */
         body {
@@ -422,6 +422,7 @@
                 <input type="text" id="player-name-input" placeholder="Ihr Name">
                 <button id="join-btn" class="btn">Quiz beitreten</button>
                 <p>Oder scannen Sie den vom Host bereitgestellten QR-Code</p>
+                <p><a href="datenschutz.html">Datenschutzhinweise</a></p>
             </div>
 
             <div id="waiting-room" class="hidden">
