--- a/qlash.html
+++ b/qlash.html
@@ -153,7 +153,7 @@
     <div id="confetti-container"></div>
 
     <footer style="text-align: center; margin-top: 20px; font-size: 0.9em;">
-        <p><a href="datenschutz.html" style="color: #007bff; text-decoration: none;">Datenschutzhinweise</a></p>
+        <p><a href="datenschutz.html" style="color: black; text-decoration: none;">Datenschutzhinweise</a></p>
     </footer>
 
     <script>
